   Ojeda Bär)

- #13093: Allow building the MSVC port with clang-cl.
  (Antonin Décimo, review by Nicolás Ojeda Bär, Samuel Hym,
   David Allsopp and Sébastien Hinderer)

### Language features:

- Add syntax support for deep effect handlers
  (Leo White, Tom Kelly, Anil Madhavapeddy, KC Sivaramakrishnan, Xavier Leroy
   and Florian Angeletti, review by the same, Hugo Heuzard, and Ulysse Gérard)

### Type system

- #11891, #12507: Allow to name new locally abstract types in constructor type
  annotations.
  (Jacques Garrigue, report and review by Gabriel Scherer and Florian Angeletti)

### Runtime system:

- #11911, #12923: Multicore statistical memory profiling.
  This restores a notable OCaml 4 feature that was missing
  in OCaml 5.
  (Nick Barnes, review by Stephen Dolan, Jacques-Henri Jourdan
   and Guillaume Munch-Maccagnoni).

- #12579: OS-based Synchronisation for Stop-the-World Sections
  (B. Szilvasy, review by Miod Vallat, Nick Barnes, Olivier Nicole,
   Gabriel Scherer and Damien Doligez)

- #12789: Restore caml_unregister_frametable from OCaml 4
  (Frédéric Recoules, review by Gabriel Scherer)

- #13003: new, more consistent names for array-creation C functions
  (Gabriel Scherer, review by Olivier Nicole)

- #13013: introduce a `caml_result` type to supersede the
  use of 'encoded exception values' in the FFI.
  (Gabriel Scherer, review by Damien Doligez,
   Guillaume Munch-Maccagnoni and Xavier Leroy,
   suggested by Guillaume Munch-Maccagnoni)

- #13086: Avoid spurious major GC slices.
  (Damien Doligez, report by Stephen Dolan, review by Gabriel Scherer
   and Stephen Dolan)

- #11779, #13117: Improve logic for fiber stack alignment.
  (Miod Vallat, report by Damien Doligez, review by Gabriel Scherer)

- #12839: Remove ATOMIC_UINTNAT_INIT from camlatomic.h (as part of a larger
  cleanup of camlatomic.h)
  (David Allsopp, review by Antonin Décimo, Sébastien Hinderer, Samuel Hym,
   Guillaume Munch-Maccagnoni and Miod Vallat)
